// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/admin_user_card/admin_user_card should match default snapshot 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
        Jim
         
        Halpert
      </span>
      <Bullet
        user={
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "Jim",
            "id": "1234",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "Halpert",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "Big Tuna",
            "notify_props": Object {
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      >
        Big Tuna
      </span>
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name is defined 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
         
      </span>
      <Bullet
        user={
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": null,
            "id": "1234",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": null,
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "Big Tuna",
            "notify_props": Object {
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      >
        Big Tuna
      </span>
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name or nickname is defined 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
         
      </span>
      <Bullet
        user={
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": null,
            "id": "1234",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": null,
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": null,
            "notify_props": Object {
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      />
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no nickname is defined 1`] = `
<div
  className="AdminUserCard"
>
  <div
    className="AdminUserCard__header"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xxl"
      src="/api/v4/users/1234/image"
      userId="1234"
      wrapperClass="admin-user-card"
    />
    <div
      className="AdminUserCard__user-info"
    >
      <span>
        Jim
         
        Halpert
      </span>
      <Bullet
        user={
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "Jim",
            "id": "1234",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "Halpert",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": null,
            "notify_props": Object {
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          }
        }
      />
      <span
        className="AdminUserCard__user-nickname"
      />
    </div>
    <div
      className="AdminUserCard__user-id"
    >
      User ID:
       
      1234
    </div>
  </div>
  <div
    className="AdminUserCard__body"
  />
  <div
    className="AdminUserCard__footer"
  />
</div>
`;
